# margin

./: .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
adapters/aquarium/: __init__.py  water.py
adapters/celery/: __init__.py  hook.py  (+1 more)
examples/: basic_health.py  full_loop.py  monitor_service.py
margin/: __init__.py  __main__.py  algebra.py  anomaly.py  bridge.py  calibrate.py  causal.py  composite.py  confidence.py  config.py  contract.py  controller.py  correlate.py  diff.py  drift.py  events.py  fingerprint.py  forecast.py  health.py  intent.py  ledger.py  loop.py  margin-language.md  observation.py  persist.py  predicates.py  provenance.py  streaming.py  transitions.py  uncertain.py  validity.py
tests/: conftest.py  margin-baseline.json  test_absence.py  test_algebra.py  test_anomaly.py  test_bridge.py  test_calibrate.py  test_causal.py  test_composite.py  test_confidence.py  test_config.py  test_contract.py  test_controller.py  test_correlate.py  test_diff.py  test_drift.py  test_events.py  test_fingerprint_ext.py  test_forecast.py  test_health.py  test_healthcare.py  test_intent.py  test_ledger.py  test_loop.py  test_neuro.py  test_observation.py  test_persist.py  test_pipeline_features.py  test_policy.py  test_policy_compose.py  test_policy_temporal.py  test_policy_trace.py  test_policy_tuning.py  test_policy_validate.py  test_predicates.py  test_printer3d.py  test_provenance.py  test_reverse_bridge.py  test_ros2.py  test_staleness.py  (+6 more)
transformer/: __init__.py
(+52 files in other folders)
